[gd_scene load_steps=13 format=3 uid="uid://bb4h3x8sfb2ih"]

[ext_resource type="Script" uid="uid://cgkal4yoabsib" path="res://Scripts/Other/game_manager.gd" id="1_dki18"]
[ext_resource type="Shader" uid="uid://cdx85ofnyocod" path="res://Scripts/Shaders/circle_fade.gdshader" id="2_8r2ko"]
[ext_resource type="PackedScene" uid="uid://clnxtrqj4ui8" path="res://Scenes/UI/ui.tscn" id="2_jqq52"]
[ext_resource type="FontFile" uid="uid://cb0se2n3oehgs" path="res://Font/DiggyWorldFont.ttf" id="2_rrags"]
[ext_resource type="PackedScene" uid="uid://6n071h8v5bp2" path="res://Scenes/UI/number_display.tscn" id="3_l7anr"]

[sub_resource type="LabelSettings" id="LabelSettings_rrags"]
font = ExtResource("2_rrags")
font_size = 32
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d5rs3"]
shader = ExtResource("2_8r2ko")
shader_parameter/radius = 0.0
shader_parameter/center = Vector2(576, 324)

[sub_resource type="Animation" id="Animation_v01ls"]
resource_name = "Fade_In"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [648.0, 0.0]
}

[sub_resource type="Animation" id="Animation_588s5"]
resource_name = "Fade_Out"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../UI:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1152.0]
}

[sub_resource type="Animation" id="Animation_bn2ci"]
resource_name = "Fade_Out_NOUI"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../UI:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1152.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../TimerUI:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_a8akf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../UI:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../TimerUI:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iyaf2"]
_data = {
&"Fade_In": SubResource("Animation_v01ls"),
&"Fade_Out": SubResource("Animation_588s5"),
&"Fade_Out_NOUI": SubResource("Animation_bn2ci"),
&"RESET": SubResource("Animation_a8akf")
}

[node name="GameManager" type="Node"]
process_mode = 3
script = ExtResource("1_dki18")

[node name="TimerUI" type="CanvasLayer" parent="."]

[node name="TimerLabel" type="Label" parent="TimerUI"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 44.0
grow_horizontal = 2
text = ":    :    :"
label_settings = SubResource("LabelSettings_rrags")
horizontal_alignment = 1

[node name="NumberDisplay" parent="TimerUI" instance=ExtResource("3_l7anr")]
position = Vector2(469, 22)
scale = Vector2(3, 3)

[node name="NumberDisplay2" parent="TimerUI" instance=ExtResource("3_l7anr")]
position = Vector2(533, 22)
scale = Vector2(3, 3)

[node name="NumberDisplay3" parent="TimerUI" instance=ExtResource("3_l7anr")]
position = Vector2(597, 22)
scale = Vector2(3, 3)

[node name="NumberDisplay4" parent="TimerUI" instance=ExtResource("3_l7anr")]
position = Vector2(634, 22)
scale = Vector2(3, 3)
display_num = 1

[node name="SpeedrunTimer" type="Timer" parent="TimerUI"]
wait_time = 0.1

[node name="FadeInOut" type="CanvasLayer" parent="."]
layer = 100

[node name="Fade" type="ColorRect" parent="FadeInOut"]
material = SubResource("ShaderMaterial_d5rs3")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeInOut/Fade"]
libraries = {
&"": SubResource("AnimationLibrary_iyaf2")
}

[node name="BoneQueue" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="UI" parent="." instance=ExtResource("2_jqq52")]

[connection signal="timeout" from="TimerUI/SpeedrunTimer" to="." method="_on_speedrun_timer_timeout"]
[connection signal="animation_finished" from="FadeInOut/Fade/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="BoneQueue" to="." method="_on_bone_queue_timeout"]
